# ug4_project

./: .gitignore  edge_pts.py  helper_tools.py  oa.py  oa_fan.py  perception.py  planning.py  plot.py  rot.py  sim.py  sim_objects.py  testsuite.py  usv.py
include/: agent.h  collision_avoidance.h  swarm_tools.h
notebooks/: Untitled.ipynb  params.ipynb
report/: eushield.sty  mybibfile.bib  project_includes.tex  skeleton.tex
scripts/: .oa.py.swp  sim_objects.py  sim_test.py
src/: collision_avoidance.cpp  swarm_tools.cpp
swarm/src/swarm_control/: local_planner.launch
swarm/src/swarm_control/include/: agent_control.h  collision_avoidance.h  motion_goal_control.h
swarm/src/swarm_control/src/: CMakeLists.txt  agent_control.cpp  collision_avoidance.cpp  collision_avoidance_service.cpp  intruder_planner.cpp  motion_goal_control.cpp  package.xml
swarm/src/swarm_control/src/launch/: intruder_control.launch
swarm/src/swarm_control/src/srv/: CollisionAvoidance.srv
swarm/src/swarm_core/include/: agent.h  ros_swarm_tools.h  swarm_tools.h  usv_swarm.h
swarm/src/swarm_core/src/: CMakeLists.txt  agent.cpp  package.xml  ros_swarm_tools.cpp  swarm_tools.cpp  usv_swarm.cpp
swarm/src/swarm_local_planner/: .CMakeLists.txt.swp
swarm/src/swarm_local_planner/include/: collision_avoidance.h  motion_goal_control.h  pid.h  task_allocation.h  usv_swarm.h
swarm/src/swarm_local_planner/src/: CMakeLists.txt  collision_avoidance.cpp  collision_avoidance_service.cpp  demo  intruder_planner.cpp  local_planner.cpp  motion_goal_control.cpp  package.xml  pid.cpp  usv_planner.cpp  usv_swarm.cpp
swarm/src/swarm_msgs/src/: CMakeLists.txt  package.xml
swarm/src/swarm_msgs/src/msg/: agentAssignment.msg  agentCommand.msg  agentConstraints.msg  agentParam.msg  agentState.msg  agentTask.msg  agentType.msg  batchIntruderPreviousStates.msg  initializeSystem.msg  intruderAgent.msg  intruderPreviousStates.msg  simulationMarker.msg  swarmAssignment.msg  taskType.msg  threatStatistics.msg  usvAgent.msg  worldState.msg
swarm/src/swarm_planner/src/: CMakeLists.txt  package.xml  usv_planner.cpp
swarm/src/swarm_planner/src/launch/: random_swarm.launch  swarm.launch  usv_planner.launch
swarm/src/swarm_simulation/src/: CMakeLists.txt  package.xml
swarm/src/swarm_simulation/src/config/: random_simulation_params.yaml  simulation_params.yaml
swarm/src/swarm_simulation/src/launch/: random_simulation.launch  swarm_simulation.launch
swarm/src/swarm_simulation/src/scripts/: helper_tools.py  launch_sim  oa.py  perception.py  plot.py  random_swarm.py  sim.py  sim_objects.py  simulation_listener.py
swarm/src/swarm_task_manager/include/: task_allocation.h
swarm/src/swarm_task_manager/src/: CMakeLists.txt  package.xml  re_sync_service.cpp  swarm_task_manager.cpp  task_allocation.cpp  task_allocation_model_predictive.cpp
swarm/src/swarm_task_manager/src/srv/: modelPredictiveSimulation.srv  modelPredictiveSimultation.srv  resync.srv
swarm/src/swarm_threat_detection/src/: CMakeLists.txt  package.xml  requirements.txt  setup.py
swarm/src/swarm_threat_detection/src/launch/: swarm_threat_detection.launch
swarm/src/swarm_threat_detection/src/scripts/: basic_threat_detection.py  evaluate_ffnn_model  evaluate_rnn_model  ffnn_grid_search  nn_model_node  nn_threat_detector.py  parse_ais_dataset  rnn_grid_search  threat_detection_node
swarm/src/swarm_threat_detection/src/srv/: ThreatDetection.srv  batchIntruderCommands.srv
swarm/src/swarm_threat_detection/src/swarmais/: __init__.py  aisdata.py  analysisutils.py  models.py  preprocessing.py  schedulers.py
testsuite/: collision_avoidance_tests.cpp  tools_tests.cpp
