<?xml version="1.0"?>
<!--
  Copyright (c) 2016 Georgia Institute of Technology

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>swarm_planner</name>
  <version>0.0.1</version>
  <description>Package for collision avoidance</description>

  <maintainer email="dylanangus@hotmail.com">Dylan Angus</maintainer>

  <author email="dylanangus@hotmail.com">Dylan Angus</author>

  <license>BSD</license>

  <url type="website"></url>

  <author>Dylan Angus</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>swarm_msgs</build_depend>
  <build_depend>swarm_core</build_depend>
  <build_depend>swarm_control</build_depend>
  <build_depend>swarm_task_manager</build_depend>
  <build_depend>swarm_threat_detection</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>swarm_msgs</run_depend>
  <run_depend>swarm_core</run_depend>
  <run_depend>swarm_control</run_depend>
  <run_depend>swarm_task_manager</run_depend>
  <run_depend>swarm_threat_detection</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
